@@ -1,3 +1,5 @@
+- fix segfault in USB detection code (when no module match, #32624)
+
 1.13:
 - use module names instead of filenames
 - convert module name to filename before loading it
